feat(auth): 实现密码登录功能并优化商家注册接口
- 新增密码登录接口，支持手机号和密码登录
- 禁用第三方登录功能
- 优化商家注册接口，增加商家头像、联系人邮箱、营业资质等字段
- 完善登录验证逻辑，包括手机号格式校验、密码比对、用户状态检查
- 添加token过期验证机制
- 重构笔记创建页面，支持图片上传、位置定位等功能
- 新增笔记评论相关API接口
- 调整路由配置，移除已废弃的路由路径